apply changes from stable

--- a/guide/RedXpert_Guide-ru.tex
+++ b/guide/RedXpert_Guide-ru.tex
@@ -324,17 +324,6 @@ RedXpert обладает рядом полезных компонентов: в
 	\includegraphics[width = 0.4\linewidth]{img/keywords.png}
 \end{figure}
 
-\anonsubsubsection{Коды состояний SQL}
-
-Согласованный компонент SQL State Codes предоставляет опорную точку для стандартных кодов состояний SQL, которые могут быть возвращены при ошибке или иным образом из многочисленных действий с базами данных или запросов.
-
-В этом компоненте перечислены коды состояний SQL для клиентского приложения базы данных SQL, которые могут быть возвращены при ошибке или каком-либо действии с базой данных.
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[width = 0.5\linewidth]{img/state_codes.png}
-\end{figure}
-
 \anonsubsubsection{Драйверы}
 
 Панель \textit{Драйверы} перечисляет все установленные в настоящее время драйверы JDBC в приложении. Дополнительную информацию см. в разделе \hyperref[sec:drivers]{«Драйверы»}.
@@ -342,24 +331,6 @@ RedXpert обладает рядом полезных компонентов: в
 \begin{figure}[H]
 	\centering
 	\includegraphics[width = 0.35\linewidth]{img/drivers.png}
-\end{figure}
-
-\anonsubsubsection{Системные свойства}
-
-Компонент \textit{Системные свойства} определяет характеристики системного окружения, описывает конфигурацию текущей рабочей среды. Служит главным образом для информационных целей.
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[width = 0.75\linewidth]{img/system_properties.png}
-\end{figure}
-
-\anonsubsubsection{Блокнот}
-
-Панель \textit{Блокнот} является текстовым редактором не поддерживающим форматирование. Рекомендуется для временного отображения или редактирования текста по мере необходимости. Содержимое черновика можно перенести в \textit{Редактор запросов}. Аналогичен компоненту \hyperref[sec:draft]{Черновик}.
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[width = 0.55\linewidth]{img/notepad.png}
 \end{figure}
 
 \anonsubsubsection{Строка состояния}
@@ -371,7 +342,7 @@ RedXpert обладает рядом полезных компонентов: в
 	\includegraphics[width = 1\linewidth]{img/status_bar.png}
 \end{figure}
 
-\hyperref[sec:toolbar]{Панель инструментов} в верхней части окна приложения также настраивается через меню \textit{Вид} и в \hyperref[sec:pref_toolbar]{настройках} приложения. Каждая группа инструментов может перемещаться горизонтально или вертикально вдоль области верхней панели.
+\hyperref[sec:toolbar]{Панель инструментов} в верхней части окна приложения также настраивается через меню \textit{Вид} и в \hyperref[sec:pref_toolbar]{настройках} приложения.
 
 \begin{figure}[H]
 	\centering
@@ -597,7 +568,7 @@ RedXpert использует информацию, доступную из ус
 \end{redremark}
 
 \begin{enumerate}[leftmargin=15pt]
-	\item Откройте панель \textit{Драйверы}, установив галочку в пункте меню \textit{Вид}.
+	\item Откройте панель \textit{Драйверы} в пункте меню \textit{Инструменты}.
 	\item Откройте вкладку «Драйверы» на центральной панели (если вкладка не видна, кликните мышью по узлу «JDBC Drivers» панели  \textit{Драйверы}).
 	\item Нажмите кнопку «New driver» на вкладке «Драйверы» или на кнопку 
 	\begin{tikzpicture}
@@ -1646,6 +1617,30 @@ SELECT * FROM employees WHERE (surname = ?)
 \anonsubsubsection{Удаление ролей}
 На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени роли и выберите пункт всплывающего меню \textit{Удалить <имя роли>:ROLE}. Откроется  диалоговое окно для подтверждения или отката операции удаления роли (см. \hyperref[ris:01]{рис.~\ref{ris:01}}). Для подтверждения операции нажмите кнопку «Подтвердить».
 
+\anonsubsection{ПОЛЬЗОВАТЕЛИ}
+
+\anonsubsubsection{Создание пользователей}
+
+Диалоговое окно \textit{Create user} позволяет создавать новых пользователей в выбранном соединении с базой данных.
+
+\begin{enumerate}[leftmargin=26pt]
+	\item На панели \textit{Подключения} щелкните правой кнопкой мыши по объекту ПОЛЬЗОВАТЕЛИ и выберите пункт \textit{Создать USER} всплывающего меню. Откроется диалоговое окно.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.6\linewidth]{img/create_user.png}
+	\end{figure}
+	\item Введите запрашиваемые данные в данном окне.
+	\item Нажмите кнопку \textit{OK}. Появится новое диалоговое окно для подтверждения или отката операции создания роли (см. \hyperref[ris:01]{рис.~\ref{ris:01}}).
+	\item Проверьте сгенерированный SQL код.
+	\item Сделайте \ttt{commit} или \ttt{rollback} транзакции, нажав на соответствующие кнопки.
+\end{enumerate}
+
+\anonsubsubsection{Изменение пользователей}
+На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени пользователя и выберите пункт всплывающего меню \textit{Редактировать <имя роли>:USER}. откроется окно редактирования пользователя
+
+\anonsubsubsection{Удаление пользователей}
+На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени пользователя и выберите пункт всплывающего меню \textit{Удалить <имя пользователя>:USER}. Откроется  диалоговое окно для подтверждения или отката операции удаления пользователя (см. \hyperref[ris:01]{рис.~\ref{ris:01}}). Для подтверждения операции нажмите кнопку «Подтвердить».
+
 \newpage
 \section{Выполнение хранимых объектов}\label{sec:execute_proc}
 
@@ -1727,7 +1722,7 @@ SELECT * FROM employees WHERE (surname = ?)
 	\end{figure}
 	\item Выберите открытое соединение.
 	\item Выберите действие в случае возникновения ошибки: остановиться или продолжить.
-	\item Укажите путь к файлу с SQL запросами.
+	\item Укажите путь к файлу с SQL запросами, если вы хотите выполнить скрипт из файла.
 	\item Поставьте галочку, если вы хотите видеть подробный вывод о ходе выполнения.
 	\item Нажмите кнопку \textit{Start}.
 	\item Сделайте \ttt{commit} или \ttt{rollback} транзакции, нажав на соответствующие кнопки.
