--- a/guide/general_defs.tex
+++ b/guide/general_defs.tex
@@ -268,8 +268,8 @@
 \vspace*{\fill}
 
 \begin{flushright}
-\Huge {\xhrulefill{red}{2mm}\color{red} RedXpert} \\
-\LARGE Версия 2021.02\\
+\Huge {\xhrulefill{red}{2mm}\color{red} RedExpert} \\
+\LARGE Версия 2021.10\\
 #1
 \end{flushright}
 
