--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -741,6 +741,8 @@ CheckForUpdateNotifier.newVersionAvailableText=New version {0} available.
 CheckForUpdateNotifier.newVersionMessage=New version {0} is available for download at <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\nClick <a  style=\"color:#3F7ED3\" href=\"{2}\">here</a> to go to the download page.\n\nDo you wish to view the version notes for this release?
 CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of RedXpert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
+CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you want to restart the application?
+CheckForUpdateNotifier.restart.message.title=Update downloaded
 CheckForUpdateNotifier.title=RedXpert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ColumnConstraintTableModel.Name=Name
@@ -1247,6 +1249,7 @@ SimpleDataItemViewerPanel.DataType=Data Type:
 SimpleDataItemViewerPanel.Size=Size:
 SimpleDataItemViewerPanel.Text=Text
 SystemOutputPanel.title=Output Console
+SystemResources.findedOldSettings=The settings of the previous version of application were found.\nApply these settings in this version?
 TableDataTab.Commit=Commit
 TableDataTab.DeleteRecord=Delete record
 TableDataTab.FetchAll=Fetch all
