Fix the context menu of objects
translate the object type in the context menu

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -672,10 +672,10 @@ BrowserTreePopupMenu.addNewConnection=New Connection
 BrowserTreePopupMenu.connect=Connect
 BrowserTreePopupMenu.connectText=Connect Data Source {0}
 BrowserTreePopupMenu.copyName=Copy Name
-BrowserTreePopupMenu.create=Create
+BrowserTreePopupMenu.create=Create {0}
 BrowserTreePopupMenu.createTableStatement=CREATE TABLE statement
 BrowserTreePopupMenu.dataBaseInformation=Database information
-BrowserTreePopupMenu.delete=Delete
+BrowserTreePopupMenu.delete=Delete {0}
 BrowserTreePopupMenu.deleteText=Remove Data Source {0}
 BrowserTreePopupMenu.disconnect=Disconnect
 BrowserTreePopupMenu.disconnectText=Disconnect Data Source {0} 
@@ -684,7 +684,7 @@ BrowserTreePopupMenu.duplicateText=Create Duplicate of Connection {0}
 BrowserTreePopupMenu.duplicateWithSource=Duplicate source
 BrowserTreePopupMenu.duplicateWithSourceText1=Create Connection with Data Source as {0}
 BrowserTreePopupMenu.duplicateWithSourceText2=Create Connection with Selected Data Source
-BrowserTreePopupMenu.edit=Edit
+BrowserTreePopupMenu.edit=Edit {0}
 BrowserTreePopupMenu.exportDbunit=Export as DBUnit Dataset
 BrowserTreePopupMenu.exportDelimited=Export to Delimited File
 BrowserTreePopupMenu.exportExcel=Export to Excel Spreadsheet
@@ -700,6 +700,36 @@ BrowserTreePopupMenu.reload=Reload {0}
 BrowserTreePopupMenu.selectStatement=SELECT statement
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
 BrowserTreePopupMenu.updateStatement=UPDATE statement
+BrowserTreePopupMenu.DATABASE_TRIGGER=trigger for database
+BrowserTreePopupMenu.DDL_TRIGGER=trigger for DDL
+BrowserTreePopupMenu.DOMAIN=domain
+BrowserTreePopupMenu.EXCEPTION=exception
+BrowserTreePopupMenu.EXTERNAL_FUNCTION=UDF
+BrowserTreePopupMenu.FUNCTION=function
+BrowserTreePopupMenu.GLOBAL_TEMPORARY=global temporary table
+BrowserTreePopupMenu.INDEX=index
+BrowserTreePopupMenu.PACKAGE=package
+BrowserTreePopupMenu.PROCEDURE=procedure
+BrowserTreePopupMenu.ROLE=role
+BrowserTreePopupMenu.SEQUENCE=sequences
+BrowserTreePopupMenu.SYNONYM=synonym
+BrowserTreePopupMenu.SYSTEM_DATE_TIME_FUNCTIONS=system date time function
+BrowserTreePopupMenu.SYSTEM_DOMAIN=system domain
+BrowserTreePopupMenu.SYSTEM_FUNCTIONS=system function
+BrowserTreePopupMenu.SYSTEM_INDEX=system index
+BrowserTreePopupMenu.SYSTEM_NUMERIC_FUNCTIONS=system numeric function
+BrowserTreePopupMenu.SYSTEM_PACKAGE=system package
+BrowserTreePopupMenu.SYSTEM_ROLE=system role
+BrowserTreePopupMenu.SYSTEM_SEQUENCE=system sequence
+BrowserTreePopupMenu.SYSTEM_STRING_FUNCTIONS=system string function
+BrowserTreePopupMenu.SYSTEM_TABLE=system table
+BrowserTreePopupMenu.SYSTEM_TRIGGER=system trigger
+BrowserTreePopupMenu.SYSTEM_VIEW=system view
+BrowserTreePopupMenu.USER=user
+BrowserTreePopupMenu.TABLE=table
+BrowserTreePopupMenu.TABLESPACE=tablespace
+BrowserTreePopupMenu.TRIGGER=trigger for table
+BrowserTreePopupMenu.VIEW=view
 BrowserTreePopupMenuActionListener.ExportData=Export Data
 BrowserTreePopupMenuActionListener.ImportData=Import Data
 BrowserTreePopupMenuActionListener.exportDbunit=Export DBUnit
@@ -1159,6 +1189,7 @@ NamedObject.SYSTEM_TRIGGER=System triggers
 NamedObject.SYSTEM_VIEW=System views
 NamedObject.USER=Users
 NamedObject.TABLE=Tables
+NamedObject.TABLESPACE=Tablespaces
 NamedObject.TRIGGER=Triggers for Table
 NamedObject.VIEW=Views
 ObjectDefinitionPanel.DatabaseView=Database View
