See RS-70514 add support tablespace

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -904,6 +904,7 @@ CreateIndexPanel.ascending=ASCENDING
 CreateIndexPanel.descending=DESCENDING
 CreateIndexPanel.fields=Fields
 CreateIndexPanel.sorting=Sorting
+CreateIndexPanel.tablespace=Tablespace
 CreateIndexPanel.unique=Unique
 CreateIndexPanel.AlterIndex=Alter Index
 CreateIndexPanel.CreateIndex=Create Index
@@ -1288,6 +1289,21 @@ TableDataTab.InsertRecord=Insert record
 TableDataTab.ReloadData=Reload data
 TableDataTab.Rollback=Rollback
 TableDataTab.labelExecuting=Executing query for data...
+TableDefinitionPanel.PK=PK
+TableDefinitionPanel.Name=Name
+TableDefinitionPanel.Datatype=Datatype
+TableDefinitionPanel.Domain=Domain
+TableDefinitionPanel.Size=Size
+TableDefinitionPanel.Scale=Scale
+TableDefinitionPanel.Subtype=Subtype
+TableDefinitionPanel.Required=NOT NULL
+TableDefinitionPanel.Check=Check
+TableDefinitionPanel.Description=Description
+TableDefinitionPanel.ComputedBy=Computed by
+TableDefinitionPanel.Autoincrement=Autoincrement
+TableDefinitionPanel.DefaultValue=Default Value
+TableDefinitionPanel.Encoding=Encoding
+TableDefinitionPanel.Tablespace=Tablespace
 TablePrivilegeTab.Grantor=Grantor
 TablePrivilegeTab.Grantee=Grantee
 TablePrivilegeTab.Privilege=Privilege
