--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -903,6 +903,7 @@ CreateIndexPanel.ascending=По возрастанию
 CreateIndexPanel.descending=По убыванию
 CreateIndexPanel.fields=Поля
 CreateIndexPanel.sorting=Сортировка
+CreateIndexPanel.tablespace=Табличное пространство
 CreateIndexPanel.unique=Уникальный
 CreateIndexPanel.AlterIndex=Изменение индекса
 CreateIndexPanel.CreateIndex=Создание индекса
@@ -1287,6 +1288,21 @@ TableDataTab.InsertRecord=Вставить запись
 TableDataTab.ReloadData=Обновить данные
 TableDataTab.Rollback=Откатить
 TableDataTab.labelExecuting=Выполнение запроса загрузки данных...
+TableDefinitionPanel.PK=PK
+TableDefinitionPanel.Name=Название
+TableDefinitionPanel.Datatype=Тип данных
+TableDefinitionPanel.Domain=Домен
+TableDefinitionPanel.Size=Размер
+TableDefinitionPanel.Scale=Точность
+TableDefinitionPanel.Subtype=Подтип
+TableDefinitionPanel.Required=NOT NULL
+TableDefinitionPanel.Check=Проверка
+TableDefinitionPanel.Description=Описание
+TableDefinitionPanel.ComputedBy=Вычисляется как
+TableDefinitionPanel.Autoincrement=Автоинкремент
+TableDefinitionPanel.DefaultValue=Значение по умолчанию
+TableDefinitionPanel.Encoding=Кодировка
+TableDefinitionPanel.Tablespace=Табличное пространство
 TablePrivilegeTab.Grantor=Правообладатель
 TablePrivilegeTab.Grantee=Получатель прав
 TablePrivilegeTab.Privilege=Привилегия
