--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -126,6 +126,7 @@ action.duplicate-row-up-command=Дублировать текст вверху
 action.editor-add-user-keyword=Добавить пользовательские ключевые слова
 action.editor-command=Редактор запросов
 action.editor-conn-change-command=Закрыть подключение редактора
+action.editor-copy-selected-cells=Копировать выделенные ячейки
 action.editor-export-command=Экспорт результатов
 action.editor-format-sql-command=Формат SQL
 action.editor-next-command=Следующее утверждение
