--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -41,6 +41,7 @@ common.error-message=Error message
 common.error.apply-changes=An error occurred applying the specified changes.\n\nThe system returned:\n
 common.error.connection=The connection to the database could not be established. \nPlease ensure all required fields have been entered correctly and try again.\n\nThe system returned:\n
 common.fetched=Count fetched
+common.file=File
 common.finish.button=Finish
 common.generate.button=Generate
 common.get-rows-count=Get rows count
@@ -890,6 +891,10 @@ ConnectionsTreeToolBar.moveConnectionUp=Move connection up
 ConnectionsTreeToolBar.newFolder=New folder
 ConnectionsTreeToolBar.reloadSelection=Reload the currently selected node
 ConnectionsTreeToolBar.sortConnections=Sort connections
+CreateFunctionPanel.Arguments=Arguments
+CreateFunctionPanel.Domain=Domain
+CreateFunctionPanel.ReturnsType=Returns type
+CreateFunctionPanel.Type=Type
 CreateGeneratorPanel.increment=Increment
 CreateGeneratorPanel.start-value=Start Value
 CreateIndexPanel.ascending=ASCENDING
@@ -898,6 +903,18 @@ CreateIndexPanel.fields=Fields
 CreateIndexPanel.sorting=Sorting
 CreateIndexPanel.tablespace=Tablespace
 CreateIndexPanel.unique=Unique
+CreatePackagePanel.Body=Body
+CreatePackagePanel.Description=Description
+CreatePackagePanel.Header=Header
+CreateProcedureFunctionPanel.Body={0} body
+CreateProcedureFunctionPanel.DDL=DDL
+CreateProcedureFunctionPanel.Description=Description
+CreateProcedureFunctionPanel.Edit=Edit
+CreateProcedureFunctionPanel.FUNCTION=Function
+CreateProcedureFunctionPanel.InputParameters=Input Parameters
+CreateProcedureFunctionPanel.OutputParameters=Output Parameters
+CreateProcedureFunctionPanel.PROCEDURE=Procedure
+CreateProcedureFunctionPanel.Variables=Variables
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
 CreateTableFunctionPanel.Constraints=Constraints
@@ -921,6 +938,15 @@ CreateTriggerPanel.database-trigger=Database trigger
 CreateTriggerPanel.event=Event
 CreateTriggerPanel.position=Position
 CreateTriggerPanel.table-trigger=Table trigger
+CreateUDFPanel.Description=Description
+CreateUDFPanel.EntryPoint=Entry Point
+CreateUDFPanel.InputParameters=Input Parameters
+CreateUDFPanel.MaxCountCharacters=Max Count Characters
+CreateUDFPanel.Mechanism=Mechanism
+CreateUDFPanel.ModuleName=Module Name
+CreateUDFPanel.Parameter=Parameter
+CreateUDFPanel.Position=Position
+CreateUDFPanel.ReturnsType=Returns Type
 DatabaseObjectMetaDataPanel.DatabaseObjectMetaData=Database Object Meta Data
 DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
@@ -932,6 +958,9 @@ DependenciesPanel.dependent=Objects,that depend on {0}
 DockedTabPane.menuItem.close=Close
 DockedTabPane.menuItem.minimize=Minimize
 DockedTabPane.menuItem.minimizeAll=Minimize All
+DomainPanel.Domain=Domain:
+DomainPanel.EditDomain=Edit domain
+DomainPanel.NewDomain=New domain
 ErdPopupMenu.DatabaseTable.tool-tip=Create a new database table
 ErdPopupMenu.DatabaseTable=Database Table
 ErdPopupMenu.DisplayGrid=Display grid
@@ -1112,6 +1141,15 @@ IndexColumnsModel.FieldName=Field Name
 IndexColumnsModel.FieldPosition=Field Position
 IndexColumnsModel.StatisticSelectivity=Statistic (selectivity)
 LicenseCommand.license=License
+ListSelectionPanel.AvailableColumns=Available Columns:
+ListSelectionPanel.Move=Move
+ListSelectionPanel.SelectedColumns=Selected Columns:
+ListSelectionPanel.moveSelectionDown=Move selection down
+ListSelectionPanel.moveSelectionUp=Move selection up
+ListSelectionPanel.removeAllAction=Remove all
+ListSelectionPanel.removeOneAction=Remove one
+ListSelectionPanel.selectAllAction=Select all
+ListSelectionPanel.selectOneAction=Select one
 LobDataItemViewerPanel.Binary=Binary
 LobDataItemViewerPanel.Bytes=bytes
 LobDataItemViewerPanel.Image=Image
@@ -1268,6 +1306,14 @@ TableColumnIndexTableModel.Expression=Expression
 TableColumnIndexTableModel.IndexName=Index Name
 TableColumnIndexTableModel.IndexedColumn=Indexed Column
 TableColumnIndexTableModel.Unique=Unique
+TableConstraintsPanel.DeleteRule=Delete rule
+TableConstraintsPanel.Name=Name
+TableConstraintsPanel.ReferenceColumn=Reference Column
+TableConstraintsPanel.ReferenceTable=Reference Table
+TableConstraintsPanel.TableColumn=Table Column
+TableConstraintsPanel.Type=Type
+TableConstraintsPanel.UpdateRule=Update rule
+TableConstraintsPanel.X=#
 TableDataTab.Commit=Commit
 TableDataTab.DeleteRecord=Delete record
 TableDataTab.FetchAll=Fetch all
@@ -1276,7 +1322,10 @@ TableDataTab.ReloadData=Reload data
 TableDataTab.Rollback=Rollback
 TableDataTab.labelExecuting=Executing query for data...
 TableDefinitionPanel.Autoincrement=Autoincrement
+TableDefinitionPanel.ByDescriptor=By Descriptor
+TableDefinitionPanel.CSTRING=CSTRING
 TableDefinitionPanel.Check=Check
+TableDefinitionPanel.Column=Column
 TableDefinitionPanel.ComputedBy=Computed by
 TableDefinitionPanel.Datatype=Datatype
 TableDefinitionPanel.DefaultValue=Default Value
@@ -1284,12 +1333,15 @@ TableDefinitionPanel.Description=Description
 TableDefinitionPanel.Domain=Domain
 TableDefinitionPanel.Encoding=Encoding
 TableDefinitionPanel.Name=Name
+TableDefinitionPanel.NULL=NULL
 TableDefinitionPanel.PK=PK
 TableDefinitionPanel.Required=NOT NULL
 TableDefinitionPanel.Scale=Scale
 TableDefinitionPanel.Size=Size
 TableDefinitionPanel.Subtype=Subtype
+TableDefinitionPanel.Table=Table
 TableDefinitionPanel.Tablespace=Tablespace
+TableDefinitionPanel.TypeOf=Type of
 TablePrivilegeTab.Grantable=Grantable
 TablePrivilegeTab.Grantee=Grantee
 TablePrivilegeTab.Grantor=Grantor
