See RS-51169 fix the sql script panel
1. Translate the buttons on the sql script panel
2. Add autocompletion to the text field of the script.
3. After executing the script the start button becomes available

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1016,6 +1016,10 @@ ExecuteSqlScriptPanel.error.select-input-file=Please select an input file
 ExecuteSqlScriptPanel.logOutput=Print running statements (This can slow down the process significantly)
 ExecuteSqlScriptPanel.title.file-chooser=Select SQL Script
 ExecuteSqlScriptPanel.title=Execute SQL Script
+ExecuteSqlScriptPanel.Start=Start
+ExecuteSqlScriptPanel.Commit=Commit
+ExecuteSqlScriptPanel.Rollback=Rollback
+ExecuteSqlScriptPanel.Stop=Stop
 ExportAsSQLPanelOne.exportTip=Single table export retrieves requested data from one \ntable only. This will also allow for the selection of individual \ncolumns from that table.\n\nSelecting a multiple table export \ndoes not allow for individual column selection and all \ncolumns within selected tables are exported. A multiple table \nexport also allows for a single file for all tables within separate.
 ExportDBUnitCommand.title=Export DBUnit Dataset
 ExportDelimitedCommand.title=Export Data
