See RS-61582 Add a button to switch from viewing to editing an object

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -36,6 +36,7 @@ common.disconnect.button=Disconnect
 common.domain=DOMAIN
 common.driver=Driver editing
 common.drivers=Drivers
+common.edit=Edit
 common.encoding=Encoding
 common.error-message=Error message
 common.error.apply-changes=An error occurred applying the specified changes.\n\nThe system returned:\n
