--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -36,6 +36,7 @@ common.disconnect.button=Отключиться
 common.domain=ДОМЕН
 common.driver=Редактирование драйвера
 common.drivers=Драйверы
+common.edit=Редактировать
 common.encoding=Кодировка
 common.error-message=Сообщение об ошибке
 common.error.apply-changes=Ошибка применения измений.\n\n Система вернула:\n
