See RS-73055 translate update interface elements and errors. in the connection menu, remove the extra separato

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -771,6 +771,7 @@ CheckForUpdateNotifier.downloadVersionMessage=New version {0} is available for d
 CheckForUpdateNotifier.latestVersionInfoTitle=Latest Version Info
 CheckForUpdateNotifier.newVersionAvailableText=New version {0} available.
 CheckForUpdateNotifier.newVersionMessage=New version {0} is available for download at <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\nClick <a  style=\"color:#3F7ED3\" href=\"{2}\">here</a> to go to the download page.\n\nDo you wish to view the version notes for this release?
+CheckForUpdateNotifier.noInternetMessage=There is no internet connection. Please check for updates later.
 CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of RedXpert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
 CheckForUpdateNotifier.restart.message.title=Update downloaded
@@ -990,6 +991,12 @@ ErdToolBarPalette.lineStyle=Line style
 ErdToolBarPalette.relation=Create a new table relationship
 ErdToolBarPalette.zoomIn=Zoom in
 ErdToolBarPalette.zoomOut=Zoom out
+ExceptionErrorDialog.ShowStackTrace=Show Stack Trace
+ExceptionErrorDialog.pasteToClipboard=Paste stack to clipboard
+ExceptionErrorDialog.NextException=Next Exception
+ExceptionErrorDialog.PreviousException=Previous Exception
+ExceptionErrorDialog.stackNotAvailable=Exception stack trace not available.
+ExceptionErrorDialog.HideStackTrace=Hide Stack Trace
 ExecuteProcedurePanel.DataType=Data Type
 ExecuteProcedurePanel.Execute=Execute
 ExecuteProcedurePanel.Mode=Mode
