--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -770,6 +770,7 @@ CheckForUpdateNotifier.downloadVersionMessage=Новая версия {0} дос
 CheckForUpdateNotifier.latestVersionInfoTitle=Информация о последней версии
 CheckForUpdateNotifier.newVersionAvailableText=Доступна новая версия {0}.
 CheckForUpdateNotifier.newVersionMessage=Новая версия {0} доступна для скачивания c <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\nКликните <a  style=\"color:#3F7ED3\" href=\"{2}\">Здесь</a> чтобы перейти на страницу загрузки.\n\nВы хотите просмотреть примечания к версии для этого выпуска?
+CheckForUpdateNotifier.noInternetMessage=Отсутствует подключение к интернету. Проверьте обновления позже.
 CheckForUpdateNotifier.noUpdateMessage=Обновление недоступно. \nДанная версия RedXpert актуальна. \nПериодически проверяйте обновления, чтобы убедиться, что у вас установлена последняя версия.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Получение примечаний к выпуску новой версии
 CheckForUpdateNotifier.restart.message.title=Обновление загружено
@@ -990,6 +991,12 @@ ErdToolBarPalette.lineStyle=Стиль линии
 ErdToolBarPalette.relation=Создать новую связь таблицы
 ErdToolBarPalette.zoomIn=Увеличить
 ErdToolBarPalette.zoomOut=Уменьшить
+ExceptionErrorDialog.ShowStackTrace=Показать трассировку стека
+ExceptionErrorDialog.pasteToClipboard=Копировать стек
+ExceptionErrorDialog.NextException=Следующее исключение
+ExceptionErrorDialog.PreviousException=Предыдущее исключение
+ExceptionErrorDialog.stackNotAvailable=Трассировка стека для данного исключения недоступна.
+ExceptionErrorDialog.HideStackTrace=Скрыть трассировку стека
 ExecuteProcedurePanel.DataType=Тип данных
 ExecuteProcedurePanel.Execute=Выполнить
 ExecuteProcedurePanel.Mode=Режим
