--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -991,6 +991,12 @@ ErdToolBarPalette.lineStyle=Line style
 ErdToolBarPalette.relation=Create a new table relationship
 ErdToolBarPalette.zoomIn=Zoom in
 ErdToolBarPalette.zoomOut=Zoom out
+ExceptionErrorDialog.ShowStackTrace=Show Stack Trace
+ExceptionErrorDialog.pasteToClipboard=Paste stack to clipboard
+ExceptionErrorDialog.NextException=Next Exception
+ExceptionErrorDialog.PreviousException=Previous Exception
+ExceptionErrorDialog.stackNotAvailable=Exception stack trace not available.
+ExceptionErrorDialog.HideStackTrace=Hide Stack Trace
 ExecuteProcedurePanel.DataType=Data Type
 ExecuteProcedurePanel.Execute=Execute
 ExecuteProcedurePanel.Mode=Mode
@@ -1018,6 +1024,10 @@ ExecuteSqlScriptPanel.error.select-input-file=Please select an input file
 ExecuteSqlScriptPanel.logOutput=Print running statements (This can slow down the process significantly)
 ExecuteSqlScriptPanel.title.file-chooser=Select SQL Script
 ExecuteSqlScriptPanel.title=Execute SQL Script
+ExecuteSqlScriptPanel.Start=Start
+ExecuteSqlScriptPanel.Commit=Commit
+ExecuteSqlScriptPanel.Rollback=Rollback
+ExecuteSqlScriptPanel.Stop=Stop
 ExportAsSQLPanelOne.exportTip=Single table export retrieves requested data from one \ntable only. This will also allow for the selection of individual \ncolumns from that table.\n\nSelecting a multiple table export \ndoes not allow for individual column selection and all \ncolumns within selected tables are exported. A multiple table \nexport also allows for a single file for all tables within separate.
 ExportDBUnitCommand.title=Export DBUnit Dataset
 ExportDelimitedCommand.title=Export Data
