add the possibility of working with procedure cursors

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -917,6 +917,7 @@ CreateProcedureFunctionPanel.InputParameters=Input Parameters
 CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
 CreateProcedureFunctionPanel.Variables=Variables
+CreateProcedureFunctionPanel.Cursors=Cursors
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
 CreateTableFunctionPanel.Constraints=Constraints
@@ -1354,6 +1355,8 @@ TableDefinitionPanel.Subtype=Subtype
 TableDefinitionPanel.Table=Table
 TableDefinitionPanel.Tablespace=Tablespace
 TableDefinitionPanel.TypeOf=Type of
+TableDefinitionPanel.Scroll=Scroll
+TableDefinitionPanel.SelectOperator=Select operator
 TablePrivilegeTab.Grantable=Grantable
 TablePrivilegeTab.Grantee=Grantee
 TablePrivilegeTab.Grantor=Grantor
