--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -917,6 +917,7 @@ CreateProcedureFunctionPanel.InputParameters=Входные параметры
 CreateProcedureFunctionPanel.PROCEDURE=процедуры
 CreateProcedureFunctionPanel.OutputParameters=Выходные параметры
 CreateProcedureFunctionPanel.Variables=Переменные
+CreateProcedureFunctionPanel.Cursors=Курсоры
 CreateTableFunctionPanel.Columns=Столбцы
 CreateTableFunctionPanel.Connection=Подключение:
 CreateTableFunctionPanel.Constraints=Ограничения
@@ -1354,6 +1355,8 @@ TableDefinitionPanel.Subtype=Подтип
 TableDefinitionPanel.Table=Таблица
 TableDefinitionPanel.Tablespace=Табличное пространство
 TableDefinitionPanel.TypeOf=TYPE OF
+TableDefinitionPanel.Scroll=Скролл
+TableDefinitionPanel.SelectOperator=Выражение выборки
 TablePrivilegeTab.Grantable=Предоставляемый
 TablePrivilegeTab.Grantee=Получатель прав
 TablePrivilegeTab.Grantor=Правообладатель
