translate the InsertColumnPanel and the EditConstraintPanel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -162,6 +162,7 @@ action.find-next-command=Find Next
 action.find-previous-command=Find Previous
 action.generate-scripts-command.description=Generates SQL CREATE TABLE scripts
 action.generate-scripts-command=Generate SQL Scripts
+action.generator-test-data-command.description=Test Data Generator
 action.generator-test-data-command=Test Data Generator
 action.goto-command.description=Go to line number...
 action.goto-command=Go To...
@@ -178,6 +179,7 @@ action.import-xml-command=Import from XML
 action.insert-row-command=Create a new table column after the current selection
 action.license-command.description=RedXpert release license
 action.license-command=License
+action.log-in-account-command.description=Log in reddatabase.ru
 action.log-in-account-command=Log in reddatabase.ru
 action.manage-bookmarks-command=Manage Query Bookmarks
 action.manage-shortcuts-command=Manage Query Shortcuts
@@ -217,6 +219,7 @@ action.to-underscore-command=Underscore
 action.to-upper-case-command=Upper Case
 action.toggle-autocommit-command=Toggle Auto-Commit
 action.toggle-editor-output-command=Show/Hide Editor Output
+action.trace-manager-command.description=Trace Manager
 action.trace-manager-command=Trace Manager
 action.undo-command.description=Undo the last action
 action.undo-command=Undo
@@ -574,6 +577,16 @@ ApplicationLogsCommand.messageReset=Are you sure you want to reset the
 ApplicationLogsCommand.messageResetAll=Are you sure you want to reset ALL system logs?
 ApplicationLogsCommand.systemActivityLog=system activity log?
 AsbtractImportExportWorker.cancelProcessConfirm=This will cancel the current process.\nDo you wish to proceed?
+AutoIncrementPanel.CreateProcedure=Create Procedure
+AutoIncrementPanel.CreateSequence=Create Sequence
+AutoIncrementPanel.CreateTrigger=Create Trigger
+AutoIncrementPanel.Generator=Generator
+AutoIncrementPanel.Generators=Generators:
+AutoIncrementPanel.StartValue=Start Value
+AutoIncrementPanel.SystemGenerator=System Generator
+AutoIncrementPanel.Trigger=Trigger
+AutoIncrementPanel.UseExistedSequence=Use Existed Sequence
+AutoIncrementPanel.UseIdentity=Use Identity
 BrowserConstants.ALL_TYPES_CLOSED=All Types Closed
 BrowserConstants.FUNCTION=FUNCTION
 BrowserConstants.FUNCTIONS_STRING=Functions
@@ -667,6 +680,7 @@ BrowserTreeFolderPopupMenu.DeleteFolder=Delete Folder
 BrowserTreeFolderPopupMenu.DisconnectAll=Disconnect All
 BrowserTreeFolderPopupMenu.NewConnection=New Connection
 BrowserTreeFolderPopupMenu.SortConnections=Sort Connections
+BrowserTreePopupMenu.CONSTRAINT=constraint
 BrowserTreePopupMenu.DATABASE_TRIGGER=trigger for database
 BrowserTreePopupMenu.DDL_TRIGGER=trigger for DDL
 BrowserTreePopupMenu.DOMAIN=domain
@@ -697,6 +711,7 @@ BrowserTreePopupMenu.SYSTEM_TRIGGER=system trigger
 BrowserTreePopupMenu.SYSTEM_VIEW=system view
 BrowserTreePopupMenu.TABLE=table
 BrowserTreePopupMenu.TABLESPACE=tablespace
+BrowserTreePopupMenu.TABLE_COLUMN=table column
 BrowserTreePopupMenu.TRIGGER=trigger for table
 BrowserTreePopupMenu.USER=user
 BrowserTreePopupMenu.VIEW=view
@@ -771,8 +786,8 @@ CheckForUpdateNotifier.downloadVersionMessage=New version {0} is available for d
 CheckForUpdateNotifier.latestVersionInfoTitle=Latest Version Info
 CheckForUpdateNotifier.newVersionAvailableText=New version {0} available.
 CheckForUpdateNotifier.newVersionMessage=New version {0} is available for download at <a style=\"color:#3F7ED3\" href=\"{1}\">{1}</a>.\nClick <a  style=\"color:#3F7ED3\" href=\"{2}\">here</a> to go to the download page.\n\nDo you wish to view the version notes for this release?
-CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.noInternetMessage=There is no internet connection. Please check for updates later.
+CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
 CheckForUpdateNotifier.restart.message.title=Update downloaded
 CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you want to restart the application?
@@ -909,6 +924,7 @@ CreatePackagePanel.Body=Body
 CreatePackagePanel.Description=Description
 CreatePackagePanel.Header=Header
 CreateProcedureFunctionPanel.Body={0} body
+CreateProcedureFunctionPanel.Cursors=Cursors
 CreateProcedureFunctionPanel.DDL=DDL
 CreateProcedureFunctionPanel.Description=Description
 CreateProcedureFunctionPanel.Edit=Edit
@@ -917,7 +933,6 @@ CreateProcedureFunctionPanel.InputParameters=Input Parameters
 CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
 CreateProcedureFunctionPanel.Variables=Variables
-CreateProcedureFunctionPanel.Cursors=Cursors
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
 CreateTableFunctionPanel.Constraints=Constraints
@@ -964,6 +979,16 @@ DockedTabPane.menuItem.minimizeAll=Minimize All
 DomainPanel.Domain=Domain:
 DomainPanel.EditDomain=Edit domain
 DomainPanel.NewDomain=New domain
+EditConstraintPanel.Constraint=Constraint
+EditConstraintPanel.DeleteRule=Delete rule
+EditConstraintPanel.Index=Index
+EditConstraintPanel.OnField=On Field
+EditConstraintPanel.ReferenceColumn=Reference Column
+EditConstraintPanel.ReferenceTable=Reference Table
+EditConstraintPanel.Sorting=Sorting
+EditConstraintPanel.Table=Table:
+EditConstraintPanel.Type=Type:
+EditConstraintPanel.UpdateRule=Update rule
 ErdPopupMenu.DatabaseTable.tool-tip=Create a new database table
 ErdPopupMenu.DatabaseTable=Database Table
 ErdPopupMenu.DisplayGrid=Display grid
@@ -992,12 +1017,12 @@ ErdToolBarPalette.lineStyle=Line style
 ErdToolBarPalette.relation=Create a new table relationship
 ErdToolBarPalette.zoomIn=Zoom in
 ErdToolBarPalette.zoomOut=Zoom out
-ExceptionErrorDialog.ShowStackTrace=Show Stack Trace
-ExceptionErrorDialog.pasteToClipboard=Paste stack to clipboard
+ExceptionErrorDialog.HideStackTrace=Hide Stack Trace
 ExceptionErrorDialog.NextException=Next Exception
 ExceptionErrorDialog.PreviousException=Previous Exception
+ExceptionErrorDialog.ShowStackTrace=Show Stack Trace
+ExceptionErrorDialog.pasteToClipboard=Paste stack to clipboard
 ExceptionErrorDialog.stackNotAvailable=Exception stack trace not available.
-ExceptionErrorDialog.HideStackTrace=Hide Stack Trace
 ExecuteProcedurePanel.DataType=Data Type
 ExecuteProcedurePanel.Execute=Execute
 ExecuteProcedurePanel.Mode=Mode
@@ -1015,9 +1040,13 @@ ExecuteQueryDialog.operator=SQL Statement
 ExecuteQueryDialog.rollback=Rollback
 ExecuteSqlScriptPanel.ActionOnError=Action on Error:
 ExecuteSqlScriptPanel.Browse=Browse
+ExecuteSqlScriptPanel.Commit=Commit
 ExecuteSqlScriptPanel.InputFile=Input File:
+ExecuteSqlScriptPanel.Rollback=Rollback
 ExecuteSqlScriptPanel.SaveScript=Save script
 ExecuteSqlScriptPanel.Select=Select
+ExecuteSqlScriptPanel.Start=Start
+ExecuteSqlScriptPanel.Stop=Stop
 ExecuteSqlScriptPanel.UseConnection=Use connection
 ExecuteSqlScriptPanel.error.file-not-exist=The selected file does not exists in the file system
 ExecuteSqlScriptPanel.error.load-file=Unable to load an input file
@@ -1025,10 +1054,6 @@ ExecuteSqlScriptPanel.error.select-input-file=Please select an input file
 ExecuteSqlScriptPanel.logOutput=Print running statements (This can slow down the process significantly)
 ExecuteSqlScriptPanel.title.file-chooser=Select SQL Script
 ExecuteSqlScriptPanel.title=Execute SQL Script
-ExecuteSqlScriptPanel.Start=Start
-ExecuteSqlScriptPanel.Commit=Commit
-ExecuteSqlScriptPanel.Rollback=Rollback
-ExecuteSqlScriptPanel.Stop=Stop
 ExportAsSQLPanelOne.exportTip=Single table export retrieves requested data from one \ntable only. This will also allow for the selection of individual \ncolumns from that table.\n\nSelecting a multiple table export \ndoes not allow for individual column selection and all \ncolumns within selected tables are exported. A multiple table \nexport also allows for a single file for all tables within separate.
 ExportDBUnitCommand.title=Export DBUnit Dataset
 ExportDelimitedCommand.title=Export Data
@@ -1153,6 +1178,17 @@ ImportXMLCommand.title=Import XML
 IndexColumnsModel.FieldName=Field Name
 IndexColumnsModel.FieldPosition=Field Position
 IndexColumnsModel.StatisticSelectivity=Statistic (selectivity)
+InsertColumnPanel.Autoincrement=Autoincrement
+InsertColumnPanel.Check=Check
+InsertColumnPanel.ComputedBy=Computed by
+InsertColumnPanel.DefaultValue=Default Value
+InsertColumnPanel.Description=Description
+InsertColumnPanel.Domain=Domain
+InsertColumnPanel.NotNull=Not Null
+InsertColumnPanel.PrimaryKey=Primary Key
+InsertColumnPanel.SQL=SQL
+InsertColumnPanel.Table=Table:
+InsertColumnPanel.Type=Type
 LicenseCommand.license=License
 ListSelectionPanel.AvailableColumns=Available Columns:
 ListSelectionPanel.Move=Move
@@ -1196,6 +1232,7 @@ MetaKeyPanel.DatabaseObject=Database Object:
 MetaKeyPanel.NoObjects=No objects of this type are available.
 MetaKeyPanel.ObjectName=Object Name
 MetaKeyPanel.ObjectTypeName=Object Type Name: 
+NamedObject.CONSTRAINT=Constraints
 NamedObject.DATABASE_TRIGGER=Triggers for Database
 NamedObject.DDL_TRIGGER=Triggers for DDL
 NamedObject.DOMAIN=Domains
@@ -1223,6 +1260,7 @@ NamedObject.SYSTEM_TRIGGER=System triggers
 NamedObject.SYSTEM_VIEW=System views
 NamedObject.TABLE=Tables
 NamedObject.TABLESPACE=Tablespaces
+NamedObject.TABLE_COLUMN=Table column
 NamedObject.TRIGGER=Triggers for Table
 NamedObject.USER=Users
 NamedObject.VIEW=Views
@@ -1345,18 +1383,18 @@ TableDefinitionPanel.DefaultValue=Default Value
 TableDefinitionPanel.Description=Description
 TableDefinitionPanel.Domain=Domain
 TableDefinitionPanel.Encoding=Encoding
-TableDefinitionPanel.Name=Name
 TableDefinitionPanel.NULL=NULL
+TableDefinitionPanel.Name=Name
 TableDefinitionPanel.PK=PK
 TableDefinitionPanel.Required=NOT NULL
 TableDefinitionPanel.Scale=Scale
+TableDefinitionPanel.Scroll=Scroll
+TableDefinitionPanel.SelectOperator=Select operator
 TableDefinitionPanel.Size=Size
 TableDefinitionPanel.Subtype=Subtype
 TableDefinitionPanel.Table=Table
 TableDefinitionPanel.Tablespace=Tablespace
 TableDefinitionPanel.TypeOf=Type of
-TableDefinitionPanel.Scroll=Scroll
-TableDefinitionPanel.SelectOperator=Select operator
 TablePrivilegeTab.Grantable=Grantable
 TablePrivilegeTab.Grantee=Grantee
 TablePrivilegeTab.Grantor=Grantor
