add a password entry window if no password has been saved

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -50,6 +50,7 @@ common.help.button=Help
 common.indexes=Indexes
 common.key=Key
 common.message.apply-changes=Do you wish to apply your changes?
+common.message-enter-password=Your user name and password are not defined.\nPlease enter your user name and password.
 common.metadata=Meta Data
 common.mode=Mode
 common.move=Move
@@ -74,6 +75,7 @@ common.size=Size
 common.subtype=Subtype
 common.table=Table
 common.test.button=Test
+common.title-enter-password=Enter password
 common.value=Value
 common.yes.button=Yes
 # -------------------------------------------------------------
