--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -50,6 +50,7 @@ common.help.button=Справка
 common.indexes=Индексы
 common.key=Ключ
 common.message.apply-changes=Вы хотите применить изменения?
+common.message-enter-password=Ваши имя пользователя и пароль не определены.\nПожалуйста, введите ваше имя пользователя и пароль.
 common.metadata=Метаданые
 common.mode=Режим
 common.move=Переместить
@@ -74,6 +75,7 @@ common.size=Размер
 common.subtype=Подтип
 common.table=Таблица
 common.test.button=Тест
+common.title-enter-password=Ввод пароля
 common.value=Значение
 common.yes.button=Да
 # -------------------------------------------------------------
