--- a/guide/general_defs.tex
+++ b/guide/general_defs.tex
@@ -269,7 +269,7 @@
 
 \begin{flushright}
 \Huge {\xhrulefill{red}{2mm}\color{red} RedExpert} \\
-\LARGE Версия 2021.10\\
+LARGE Версия ${VERSION}\\
 #1
 \end{flushright}
 
