add explained plan

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -195,6 +195,7 @@ action.page-setup-command=Page Setup
 action.paste-command=Paste
 action.preferences-command=Preferences
 action.print-command=Print
+action.print-explained-plan-command=Print Explained Plan
 action.print-plan-command=Print Plan
 action.print-preview-command=Print Preview
 action.redo-command.description=Redo the last action
@@ -1312,6 +1313,7 @@ QueryEditorToolBar.execute-command=Execute the contents of the query editor
 QueryEditorToolBar.execute-script-command=Execute SQL Script
 QueryEditorToolBar.execute-selection-command=Execute the current text selection
 QueryEditorToolBar.manage-shortcuts-command=SQL shortcuts
+QueryEditorToolBar.print-explained-plan-command=Print explained plan for query
 QueryEditorToolBar.print-plan-command=Print plan for query
 QueryEditorToolBar.query-bookmarks=Query Bookmarks
 QueryEditorToolBar.rollback-command=Rollback all changes since last commit/rollback
