--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -195,6 +195,7 @@ action.page-setup-command=Свойства печати
 action.paste-command=Вставить
 action.preferences-command=Настройки
 action.print-command=Печать
+action.print-explained-plan-command=Показать детальный план
 action.print-plan-command=Показать план
 action.print-preview-command=Предварительный просмотр
 action.redo-command.description=Возврат отмененного действия
@@ -1312,6 +1313,7 @@ QueryEditorToolBar.execute-command=Выполнить контент в реда
 QueryEditorToolBar.execute-script-command=Выполнить SQL скрипт
 QueryEditorToolBar.execute-selection-command=Выполнить выделенный текст
 QueryEditorToolBar.manage-shortcuts-command=Сокращения SQL
+QueryEditorToolBar.print-explained-plan-command=Вывести детальный план запроса
 QueryEditorToolBar.print-plan-command=Вывести план запроса
 QueryEditorToolBar.query-bookmarks=Закладки в запросах
 QueryEditorToolBar.rollback-command=Отменить все изменения после последней фиксации/отмены
